2009-09-25  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	* lib/pytis/presentation/types_.py:
	Make subcount column id explicit in PrettyFoldable, don't use naming convention.

2009-09-25  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/data.py:
	* lib/pytis/data/postgresql.py:
	Allow using values, not only columns, in LTreeAncestor and LTreeDescendant.

2009-09-25  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/data.py:
	Fix of data operators LTreeAncestor and LTreeDescendant.

2009-09-25  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/data.py:
	* lib/pytis/data/postgresql.py:
	New data operators LTreeAncestor and LTreeDescendant.

2009-09-24  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py:
	Try to completely fix query retry in dbapi.py.

2009-09-24  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py:
	Amend: yes.
	Fix invalid local variable reference in dbapi.py
	
	

2009-09-24  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py:
	Amend: yes.
	Fix invalid local variable reference in dbapi.py
	
	

2009-09-24  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py:
	Fix invalid local variable reference in dbapi.py.

2009-09-23  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Support RUN_FORM actions better in db table computing functions.

2009-09-23  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Handle bindings and other special features in genmenu for command-like forms.

2009-09-23  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	genmenu fix.

2009-09-22  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* lib/pytis/form/application.py:
	Add separators again to menu read from the database.

2009-09-22  Pavel Hanak  <hanak@wpb.cz>

	* lib/pytis/cms/cms.py:
	Correct an error in the constructor of _TreeOrder type..

2009-09-22  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Make sure no SHOW right passes to AccessRights.
